--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/pages/donate/style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/online-zoo/style.css" />
 
-    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/svg" />
+    <link rel="shortcut icon" href="/online-zoo/assets/favicon.svg" type="image/svg" />
     <script src="./script.js" async></script>
     <title>Donate zoo</title>
 </head>
@@ -23,7 +23,7 @@
           <div class="left-container">
             <h1 class="logo" onclick="location.replace('/')">
               <span>PetStory online</span>
-              <img class="bamboo" src="/assets/icons/bamboo.svg" alt="bamboo" />
+              <img class="bamboo" src="/online-zoo/assets/icons/bamboo.svg" alt="bamboo" />
             </h1>
             <nav class="header-nav">
               <ul class="nav-container">
@@ -61,7 +61,7 @@
           <div class="footer-left_container">
             <h1 class="logo" onclick="location.replace('/')">
               <span>PetStory online</span>
-              <img class="bamboo" src="/assets/icons/bamboo.svg" alt="bamboo" />
+              <img class="bamboo" src="/online-zoo/assets/icons/bamboo.svg" alt="bamboo" />
             </h1>
             <button class="orange-button button-footer">donate for volunteers</button>
   
@@ -69,25 +69,25 @@
             <ul class="footer-list">
               <li>
                 <div class="footer_img">
-                  <img class="test" src="/assets/contact/facebook.svg" alt="">
+                  <img class="test" src="/online-zoo/assets/contact/facebook.svg" alt="">
                 </div>
                 <a  href="#">Facebook</a>
               </li>
               <li>
                 <div class="footer_img">
-                  <img src="/assets/contact/twitter.svg" alt="">
+                  <img src="/online-zoo/assets/contact/twitter.svg"alt="">
                 </div>
                 <a href="#">Twitter</a>
               </li>
               <li>
                 <div class="footer_img">
-                  <img src="/assets/contact/instagram.svg" alt="">
+                  <img src="/online-zoo/assets/contact/instagram.svg" alt="">
                 </div>
                 <a href="#">Instagram</a>
               </li>
               <li>
                 <div class="footer_img">
-                  <img src="/assets/contact/youtube.svg" alt="">
+                  <img src="/online-zoo/assets/contact/youtube.svg" alt="">
                 </div>
                 <a href="#">YouTube</a>
               </li>
