--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -31,7 +31,7 @@
               </li>
               <li class="nav-item"><a href="">Map</a></li>
               <li class="nav-item"><a href="">Zoos</a></li>
-              <li class="nav-item"><a href="/pages/donate/index.html">Donate</a></li>
+              <li class="nav-item"><a href="/online-zoo/pages/donate/index.html">Donate</a></li>
               <li class="nav-item"><a href="">Contact us</a></li>
             </ul>
           </nav>
@@ -293,7 +293,7 @@
                 <div class="testimonials__card">
                   <div class="testimonials__about">
                       <div class="testimonials__logo">
-                        <img src="/assets/icons/Oskar.svg" alt="logo">
+                        <img src="assets/icons/Oskar.svg" alt="logo">
                       </div>
                       <div class="testimonials__info">
                         <div class="testimonials__name">Oskar Samborsky</div>
@@ -391,25 +391,25 @@
           <ul class="footer-list">
             <li>
               <div class="footer_img">
-                <img class="test" src="/assets/contact/facebook.svg" alt="">
+                <img class="test" src="/online-zoo/assets/contact/facebook.svg" alt="">
               </div>
               <a  href="#">Facebook</a>
             </li>
             <li>
               <div class="footer_img">
-                <img src="/assets/contact/twitter.svg" alt="">
+                <img src="/online-zoo/assets/contact/twitter.svg" alt="">
               </div>
               <a href="#">Twitter</a>
             </li>
             <li>
               <div class="footer_img">
-                <img src="/assets/contact/instagram.svg" alt="">
+                <img src="/online-zoo/assets/contact/instagram.svg" alt="">
               </div>
               <a href="#">Instagram</a>
             </li>
             <li>
               <div class="footer_img">
-                <img src="/assets/contact/youtube.svg" alt="">
+                <img src="/online-zoo/assets/contact/youtube.svg" alt="">
               </div>
               <a href="#">YouTube</a>
             </li>
