--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -409,7 +409,7 @@
             </li>
             <li>
               <div class="footer_img">
-                <img src="/online-zoo/assets/contact/youtube.svg" alt="">
+                <img src="assets/contact/youtube.svg" alt="">
               </div>
               <a href="#">YouTube</a>
             </li>
