--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -431,7 +431,7 @@
         <div class="footer-right-container">
           <div class="info-right">
             <h2 class="right-container-subtitle">Subscribe to our news</h2>
-            <input type="email" class="footer-input" value="Enter your email">
+            <input type="email" class="footer-input" required placeholder="Enter your email">
             <button class="footer-submit">Submit</button>
           </div>
          
