--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -49,9 +49,27 @@
         <section class="panda-donate"></section>
         <section class="content-donate">
             <div class="donate-body">
-                <h3 class="title-donate">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
-                <p class="decription-donate">Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity.  But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.</p>
-                <h3 class="subtitle-donate">Donation Information</h3>
+                <h3 class="title__donate">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
+                <p class="decription__donate">Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity.  But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.</p>
+                <h3 class="subtitle__donate">Donation Information</h3>
+                <div class="donate__container">
+                  <h2 class="title_donate-container">Pick and feed a friend</h2>
+                  <p class="subtitle_donate-container">We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                  <div class="image__donate-animals">
+                      
+                  </div>
+
+                  <p class="donate__text-amount">Amount</p>
+                  <img src="../../assets/images/line-progress.png" alt="">
+                  <input placeholder="Another amount">
+                  <div class="donate__radiobuttons">
+                    <label for=""></label>
+                    <label for=""></label>
+
+                  </div>
+                  <button class="orange-button donate__button">Feed a friend now</button>
+                  <p class="donate__shared">Share with your friends on social networks </p>
+                </div>
             </div>
 
         </section>
