feat: add donate section

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -211,7 +211,7 @@
               <p class="pick-text">
                 Even though the zoo has reopened, we need you now more than ever
                 to help us deal with these problems. Please consider a gift to our
-               <a class="link" href="/pages/donate/index.html"> Emergency Support Fund</a>.
+               <a class="link" href="pages/donate/index.html"> Emergency Support Fund</a>.
               </p>
             </div>
             
@@ -431,7 +431,7 @@
         <div class="footer-right-container">
           <div class="info-right">
             <h2 class="right-container-subtitle">Subscribe to our news</h2>
-            <input type="email" class="footer-input" required placeholder="Enter your email">
+            <input type="email" class="footer__input input" required placeholder="Enter your email">
             <button class="footer-submit">Submit</button>
           </div>
          
