fix: fix bag with buttons

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -368,7 +368,7 @@
 
           <img class="line_scrol" src="assets/icons/range-input.svg" alt="">
           <button class="orange-button button-testiminials">
-            Feed a friend now
+            leave feedback
           </button>
           
           
