--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -71,10 +71,9 @@
                   <img src="../../assets/images/line-progress.png" alt="">
                   <div class="donate__buttons">
                     <div class="wrapper__another-amount">
-                      <input placeholder="Another amount" class="another_amount input">
+                      <input placeholder="Another amount" type="number" class="another_amount input">
                       <img src="../../assets/icons/dollar.svg" alt="">
                     </div>
-                    <button class="orange-button donate__button">Feed a friend now</button>
                     <div class="donate__radiobuttons">
                       <div class="radiobutton-item">
                         <input
@@ -96,6 +95,7 @@
                         /><label for="radio-2">Once</label>
                       </div>
                     </div>
+                    <button class="orange-button donate__button">Feed a friend now</button>
                     <p class="donate__shared">Share with your friends on social networks </p>
                   </div>
                 </div>
