--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -27,12 +27,11 @@
             </h1>
             <nav class="header-nav">
               <ul class="nav-container">
-                <li class="nav-item">
-                  <a class="nav-item-active" style="color:white" href="">About</a>
+                <li class="nav-item"><a href="">About</a>
                 </li>
                 <li class="nav-item"><a href="#">Map</a></li>
                 <li class="nav-item"><a href="#">Zoos</a></li>
-                <li class="nav-item"><a style="color:orange" href="#">Donate</a></li>
+                <li class="nav-item"><a class="nav-item-active" href="#">Donate</a></li>
                 <li class="nav-item"><a href="#">Contact us</a></li>
               </ul>
             </nav>
