fix: fix bag with button

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -367,8 +367,9 @@
             <span>PetStory online</span>
             <img class="bamboo" src="./assets/icons/bamboo.svg" alt="bamboo" />
           </h1>
-          <button class="orange-button button-footer">donate for volunteers</button>
-
+          <a href="pages/donate/index.html">
+            <button class="orange-button button-footer">donate for volunteers</button>
+          </a>
 
           <ul class="footer-list">
             <li>
