--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -18,7 +18,7 @@
     <title>Donate zoo</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="header-wrapper">
           <div class="left-container">
             <h1 class="logo" onclick="location.replace('../../index.html')">
