--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-wrapper">
+        <div class="header-wrapper wrapper">
           <div class="left-container">
             <h1 class="logo" onclick="location.replace('../../index.html')">
               <span>PetStory online</span>
@@ -159,7 +159,7 @@
               <button class="footer-submit">Submit</button>
             </div>
            
-            <div class="author-footer">
+            <div class="footer-author">
               <p>Designed by Alisa Samborskaya</p>
               <p>©RSSchool & ©Yem Digital 2021</p>
             </div>
