fix: change anchor to header logo

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -25,10 +25,12 @@
     <label class="hamburger" for="checkbox1"><span class="bar"></span></label>
     <div class="header-wrapper wrapper">
       <div class="left-container">
-        <h1 class="logo" onclick="location.replace('/')">
-          <span>PetStory online</span>
-          <img class="bamboo" src="./assets/icons/bamboo.svg" alt="bamboo" />
-        </h1>
+        <a href="">
+          <h1 class="logo">
+            <span>PetStory online</span>
+            <img class="bamboo" src="./assets/icons/bamboo.svg" alt="bamboo" />
+          </h1>
+        </a>
         <nav class="header-nav">
           <ul class="nav-container">
             <li class="nav-item">
